# hoverpower

./: .baw  .dockerignore  CHANGELOG  Dockerfile  MANIFEST.in  Makefile  README  pyproject.toml
.github/workflows/: artifacts.yml  release.yml  test.yml
docs/: index.rst
docs/pages/operations/: index.rst
docs/releases/: 0.10.0.rst  0.12.0.rst  0.6.0.rst  0.7.0.rst  index.rst
hoverpower/: __init__.py  __main__.py  data.py  generator.py  hard.py  info.py  path.py  secret.py  title.py
hoverpower/cli/: __init__.py  give.py
hoverpower/repo/: README.md
hoverpower/repo/bachelor/: bachelor028.pdfs  bachelor028a.pdfs  bachelor028b.pdfs  bachelor029ainfo  bachelor032.pdfs  bachelor032b.pdfs  bachelor036.pdfs  bachelor037.pdfs  bachelor037info  bachelor038.pdfs  bachelor040.pdfs  bachelor041b.pdfs  bachelor045.pdfs  bachelor045a.pdfs  bachelor045b.pdfs  bachelor046a.pdfs  bachelor067.pdfs  bachelor075info  bachelor076info  bachelor077.pdfs  bachelor077info  bachelor078.pdfs  bachelor078a.pdfs  bachelor085.pdfs  bachelor086.pdfs  bachelor090.pdfs  bachelor090info  bachelor101.pdfs  bachelor105.pdfs  bachelor109.pdfs  bachelor128info
hoverpower/repo/book/: book007.pdfs  book053.pdfs  book084.pdfs  book104.pdfs  book173.pdfs  book264.pdfs  book324.pdfs
hoverpower/repo/diss/: diss143.pdfs  diss143info  diss154.pdfs  diss172info  diss173info  diss180.pdfs  diss266info  diss272.pdfs  diss272a.pdfs  diss350.pdfs  diss406.pdfs
hoverpower/repo/docu/: docu009.pdfs  docu012.pdfs  docu013.pdfs  docu014.pdfs  docu037.pdfs
hoverpower/repo/home/: home007.pdfs  home009.pdfs  home009a.pdfs  home012.pdfs  home013.pdfs  home013a.pdfs  home014.pdfs  home014b.pdfs  home015.pdfs  home015a.pdfs  home016.pdfs  home016a.pdfs  home016c.pdfs  home017a.pdfs  home017b.pdfs  home017c.pdfs  home018b.pdfs  home018info  home019.pdfs  home019b.pdfs  home021.pdfs  (+7 more)
tests/: __init__.py  conftest.py  test_cli.py  test_generator.py  test_give.py  test_hardcore.py  test_repository.py  test_resources.py  test_secret.py  test_title.py
tests/data/: incremental_update.py  multiple_generator.py
(+34 files in other folders)
