[project]
name = "hoverpower"
version = "1.0.1"
description = ""
readme = {file = "README", content-type = "text/markdown"}
requires-python = ">=3.12"
authors = [
  {name = "Helmut Konrad Schewe", email = "helmutus@outlook.com"}
]

dependencies = [
    "resinf>=1.0.2,<2.0.0",
    "jamer>=1.0.0,<2.0.0",
    "utilo>=2.107.4,<3.0.0",
    "cryptography>=38.0.0,<47.0.0",
]

# Optional but recommended metadata
keywords = []
classifiers = [
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.13',
  'Programming Language :: Python :: 3.14',
]
license = "MIT"
license-files = ["LICENSE"]

[project.optional-dependencies]
dev = [
    "utilotest>=1.0.1,<2.0.0",
    # hardcore==0.9.0
    "pdflog==1.0.2",
    # extract all pdf
    # rawmaker>=2.40.2<3.0.0
]

[project.urls]
Homepage = "https://github.com/anaticulae/hoverpower"
Repository = "https://github.com/anaticulae/hoverpower"

[build-system]
requires = [
    "setuptools>=82.0.1",
    "wheel>=0.46.3"
]
build-backend = "setuptools.build_meta"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG"
[tool.semantic_release.changelog]
mode = "init"
output_format = "md"
[tool.semantic_release.commit_parser_options]
# allways generate a new version
patch_tags = ["fix", "perf", "build", "chore", "ci", "docs", "style", "refactor", "test", "deps"]

[project.scripts]
give = "hoverpower.cli.give:main"
power = "hoverpower.cli:main"
powersecret = "hoverpower.secret:create_secret"
powerencrypt = "hoverpower.secret:make_private"
powerdecrypt = "hoverpower.secret:make_public"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "hoverpower",
    "hoverpower.cli",
    "hoverpower.repo.book",
    "hoverpower.repo.docu",
    "hoverpower.repo.habil",
    "hoverpower.repo.home",
    "hoverpower.repo.order",
    "hoverpower.repo.paper",
    "hoverpower.repo.tech",
]
exclude = [
    "tests/*",
]
